Closed Bug 183078 Opened 22 years ago Closed 21 years ago

lose filtered folder name when migrating a 4.x profile

Categories

(MailNews Core :: Filters, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.4alpha

People

(Reporter: grylchan, Assigned: cavin)

References

Details

(Keywords: dataloss, Whiteboard: [adt2])

Attachments

(1 file, 1 obsolete file)

using commerical trunk
2002-12-02-08-trunk on xp

If you migrate a 4.x profile, you lose the destination folder
name where you want your filtered mesgs to go to. Everything
else gets migrated fine (filter name, criteria for the filter)
except the destination folder.

In my filter it shows 'Move to folder: Mail for <username>' instead
of 'Move to folder: x'.

I assume this is due to the new msgFilterRules.dat file since
Rules.dat got forked (bug 168553).


steps to reproduce
1.Create some filters for a 4.x profile (i'm using 4.8)
2.Install latest trunk
3.At the profile mgr screen select a 4.x profile with filters
4.Migrate it.
5.Open mail/news
6.Bring up filter window
7.select a filter and click edit button

result: mesgs won't be filterd to your destination folder and destination
   folder says 'Move to folder: Mail for <username>' 

expected: to have my folder name migrated over so the filters will work.
nominating for next release since it would be pain
to mannually go into the filter UI and reset each folder again.

I was going to put 'dataloss' in keyword but it's not quite
that bad
Keywords: nsbeta1
*** Bug 191153 has been marked as a duplicate of this bug. ***
Mail triage team: nsbeta1+/adt2
Assignee: naving → cavin
Keywords: nsbeta1dataloss, nsbeta1+
Whiteboard: [adt2]
Target Milestone: --- → mozilla1.4alpha
The problem is that nsMsgFilter::ConvertMoveToFolderValue() does not always call 
filterAction->SetTargetFolderUri() once it figures out the right folder uri. The 
migration code is fine as it only copies the 4.X rules.dat file over to the 7.X 
directory.
Attached patch Proposed patch, v1 (obsolete) — Splinter Review
Always set folder uri in filter action object.
Attachment #116121 - Flags: superreview?(sspitzer)
what's the code path where we fail to call filterAction->SetTargetFolderUri()?

looking at ConvertMoveToFolderValue(), your patch will make to so we it twice
(in some cases).

this code was changed by navin for #174441 and #168553, how did his change cause
this?

Status: NEW → ASSIGNED
QA Contact: laurel → esther
One call to filterAction->SetTargetFolderUri() was missing from the true case
of the following test:

  if (moveValue.Find(kImapPrefix) == 0)

So put it back to where it was.
Attachment #116121 - Attachment is obsolete: true
Attachment #116121 - Flags: superreview?(sspitzer)
Comment on attachment 116160 [details] [diff] [review]
Proposed patch, v2

r/sr=sspitzer

nice work, cavin.

this was accidentally removed from the code.
Attachment #116160 - Flags: superreview+
Attachment #116160 - Flags: review+
Comment on attachment 116160 [details] [diff] [review]
Proposed patch, v2

r/sr=sspitzer

nice work, cavin.

this was accidentally removed from the code.
Fix checked in on 03/03.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Trunk build 2003-04-10: WinXP - ok.

Esther, can you check linux?

Cant check on the Mac since blocked by bug# 190336.
Trunk build 2003-04-10: Linux RH 7 (Esther's system)
The Mail/Settings and Address Books are migrated but the filters are gone (bug#
202010) which is a linux specific problem.

I'm blocked from verifying this bug due to bug 190336 and 202010.
Depends on: 190336, 202010
QA Contact: esther → nbaca
Trunk build 2003-05-20: Mac 10.1.5, Linux RH 8
Verified Fixed (checked IMAP and POP profiles)
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: