Fix for bug 183078. Missing a filterAction->SetTargetFolderUri() call in ConvertMoveToFolderValue. r/sr=sspitzer.